# mcp-restaurant

./: .env.example  README.md  pyproject.toml
db/: restaurant.db  schema.sql  seed.sql
knowledge/: database.txt
src/: app.py
src/config/: settings.py
src/mcp_restaurant/: agent_factory.py  config.py  flow.py  memory.py  quorem.py  skills.py
src/mcp_restaurant/config/: agents.yaml  skills.yaml  tasks.yaml
src/mcp_restaurant/tools/: sqlite_tool.py
src/services/: crew_service.py
src/ui/: chat.py  sidebar.py
