[project]
name = "mcp_restaurant"
version = "0.1.0"
description = "mcp-restaurant using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.5.0"
]

[project.scripts]
mcp_restaurant = "mcp_restaurant.main:run"
run_crew = "mcp_restaurant.main:run"
train = "mcp_restaurant.main:train"
replay = "mcp_restaurant.main:replay"
test = "mcp_restaurant.main:test"
run_with_trigger = "mcp_restaurant.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
